refactor graph Iteration